Added cook registration xml CookRegistration.java still needs to store data to Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,16 @@
     <string name="login_sign_in_btn">Sign In</string>
     <string name="login_register">Register</string>
     <string name="login_forgot_password">Forgot Password</string>
+    <string name="upload_a_picture_of_a_void_cheque">Void Cheque</string>
+    <string name="finish">Finish</string>
+    <string name="register_address">Register Address</string>
+    <string name="title_activity_cook_registration">cookRegistration</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
